<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/title_events">

        <CheckBoxPreference
            app:defaultValue="true"
            app:key="@string/title_show_descriptions"
            app:title="@string/title_show_descriptions" />

        <CheckBoxPreference
            app:defaultValue="true"
            app:key="@string/title_enable_search"
            app:title="@string/title_enable_search" />

        <CheckBoxPreference
            app:defaultValue="false"
            app:isPreferenceVisible="false"
            app:key="@string/title_notify_on_new_events"
            app:title="@string/title_notify_on_new_events" />

    </PreferenceCategory>

    <PreferenceCategory
        app:summary="The job data is coming from our friends."
        app:title="@string/title_jobs">

        <CheckBoxPreference
            app:defaultValue="true"
            app:key="@string/title_enable_jobs"
            app:title="@string/title_enable_jobs" />

        <CheckBoxPreference
            app:defaultValue="false"
            app:isPreferenceVisible="false"
            app:key="@string/title_notify_on_new_jobs"
            app:title="@string/title_notify_on_new_jobs" />
    </PreferenceCategory>
</PreferenceScreen>